<resources>
    <string name="app_name">RoseChat</string>
    <string name="navi_message">message</string>
    <string name="navi_contact">contact</string>
    <string name="navi_profile">profile</string>
    <string name="action_new_chat">New Chat</string>
    <string name="aciton_add_contact">Add Contact</string>
    <string name="action_settings">Settings</string>
    <string name="blank">blank</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_add_course">Add Course</string>
    <string name="settings_delete_course">Delete Course</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_language">Language</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_log_out">Log Out</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_delete_account">Delete Account</string>
    <string name="rosechat">RoseChat</string>
    <string name="log_in_text">Log In With Rose Fire</string>
    <string name="error_add_contact_empty_field">Please fill both fields</string>
    <string name="error_add_contact_existing_contact">Contact already added</string>
    <string name="successful_add_contact">Request sent</string>
    <string name="Title_Language">Language</string>
    <string name="language_english">English</string>
    <string name="language_Chinese">中文（简体）</string>
    <string name="profile_sample_email">sample_email@rose-hulman.edu</string>
    <string name="profile_sample_name">Sample Name</string>
    <string name="profile_sample_phone_number">8128771511</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="tuesday">Tue</string>
    <string name="profile_schedule_class">class</string>
    <string name="profile_schedule_meeting">meeting</string>
    <string name="profile_schedule_outdoor">outdoor</string>
    <string name="profile_schedule_game">game</string>
    <string name="profile_schedule_sleeping">sleeping</string>
    <string name="profile_schedule_with_friends">with friends</string>
    <string name="profile_schedule_working">working</string>
    <string name="profile_edit">edit</string>
    <string name="profile_confirm">confirm</string>
    <string name="profile_edit_name">Edit Profile</string>
    <string name="delete_account_message">Are you sure you would like to delete your account? All this means is the backed up chats and contacts will be deleted</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="logout_title">Log Out</string>
    <string name="logout_message">Are you sure you would like to log out?</string>
    <string name="chat_me_blank">hello myself!</string>
    <string name="chat_me_profile_blank">S</string>
    <string name="chat_other_profile_blank">A</string>
    <string name="chat_other_blank">hello others!</string>
    <string name="settings_feedback_message">Thank you very much for using our application. In order to improve our app, we would like to get feedback on your experience.</string>
    <string name="settings_feedback_hint">Please write your feedback here</string>
    <string name="settings_feedback_author">- Abu Agarwal and Zhaoyuan Sun</string>
    <string name="Login_error">Login Error!</string>
    <string name="login_failed">Login failed.</string>
    <string name="rosefire_login_failed">RoseFire Login Failed.</string>
    <string name="request_code_error">requestCode error</string>
    <string name="login_with_test_mode">Login with test mode</string>
    <string name="loading">loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="get_contact_error">Could not get contact.</string>
    <string name="contact_initiate_error">Cannot initiate current user.</string>
    <string name="select_picture">select picture</string>
    <string name="fail_to_get_intent_data">Failed to get intent data</string>
    <string name="could_not_get_message">Could not get messages</string>
    <string name="upload_profile_pic_failed">upload profile image failed</string>
    <string name="add_new_chat">Add New Chat</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="welcome_to_rosechat">Welcome to RoseChat</string>
    <string name="fontsize">Font Size</string>
    <string name="fontfamily">Font Family</string>
    <string name="font">Font</string>
    <string name="font_family">Font Family:</string>
</resources>
