<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="edu.rosehulman.sunz1.rosechat.activities.MainActivity">

    <item
        android:id="@+id/action_new_chat"
        android:orderInCategory="10"
        android:title="@string/action_new_chat"
        app:showAsAction="never"/>
        <!--android:icon="@mipmap/ic_navi_message"/>-->

    <item
        android:id="@+id/action_add_contact"
        android:orderInCategory="20"
        android:title="@string/aciton_add_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>