<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.rosehulman.sunz1.rosechat.fragments.LoginFragment">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingBottom="50dp"
        android:paddingTop="20dp"
        android:src="@drawable/rose_logo" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/app_name_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logo_login"
        android:layout_centerHorizontal="true"
        android:text="@string/rosechat"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_login"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in_text" />

    <Button
        android:id="@+id/button_login_fake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_centerHorizontal="true"
        android:text="@string/login_with_test_mode"/>

</RelativeLayout>
