<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.rosehulman.sunz1.rosechat.fragments.ProfileFragment"
    android:id="@+id/edit_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile_picture"
            style="@style/ProfileBorder"
            android:layout_width="150sp"
            android:layout_height="150dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:src="@drawable/rose_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/profile_picture"
            android:layout_alignBottom="@+id/profile_picture"
            android:orientation="vertical">

            <EditText
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/profile_sample_name"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/profile_sample_email"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/profile_sample_phone_number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/profile_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/profile_confirm"
                android:textColor="#57a0d4"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <View
                android:layout_width="70sp"
                android:layout_height="3sp"
                android:layout_alignLeft="@+id/profile_edit"
                android:layout_alignRight="@+id/profile_edit"
                android:layout_below="@+id/profile_edit"
                android:background="#57a0d4"/>

        </LinearLayout>



        <TableLayout
            android:id="@+id/profile_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_picture"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp">

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/ProfileBorder">

                <TextView
                    android:id="@+id/profile_schedule_Sun_0"
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:padding="2dp"
                    android:text="@string/sunday"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_schedule_Mon_0"
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:padding="2dp"
                    android:text="@string/monday"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_schedule_Tue_0"
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:padding="2dp"
                    android:text="@string/tuesday"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_schedule_Wed_0"
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:padding="2dp"
                    android:text="@string/wednesday"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_schedule_Thur_0"
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:padding="2dp"
                    android:text="@string/thursday"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_schedule_Fri_0"
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:padding="2dp"
                    android:text="@string/friday"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_schedule_Sat_0"
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:padding="2dp"
                    android:text="@string/saturday"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/profile_schedule_Sun_1"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_class"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Mon_1"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Tue_1"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_class"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Wed_1"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Thur_1"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Fri_1"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Sat_1"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/profile_schedule_Sun_2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_class"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Mon_2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_meeting"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Tue_2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_class"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Wed_2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_class"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Thur_2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Fri_2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Sat_2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/profile_schedule_Sun_3"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Mon_3"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_meeting"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Tue_3"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_class"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Wed_3"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Thur_3"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Fri_3"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_outdoor"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Sat_3"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_game"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/profile_schedule_Sun_4"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Mon_4"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Tue_4"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Wed_4"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_sleeping"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Thur_4"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Fri_4"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_with_friends"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Sat_4"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/profile_schedule_Sun_5"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Mon_5"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Tue_5"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Wed_5"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_sleeping"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Thur_5"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Fri_5"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/profile_schedule_Sat_5"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:text="@string/profile_schedule_working"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>

</FrameLayout>
